# skillchain-demo

./: .gitignore  LICENSE  README.md  skillchain_project_idea.md
skillchain-mvp/: BLOCKCHAIN.md  Cargo.toml  README.md
skillchain-mvp/frontend/: package-lock.json  package.json
skillchain-mvp/frontend/public/: index.html
skillchain-mvp/frontend/src/: App.js  BlockchainApp.js  DemoApp.js  index-demo.js  index.js
skillchain-mvp/frontend/src/components/: EndorseSkill.js  MintSkill.js  SkillProfile.js
skillchain-mvp/pallets/: README.md
skillchain-mvp/pallets/endorsements/: Cargo.toml
skillchain-mvp/pallets/endorsements/src/: lib.rs
skillchain-mvp/pallets/skill-registry/: Cargo.toml
skillchain-mvp/pallets/skill-registry/src/: lib.rs
skillchain-mvp/runtime/: Cargo.toml
