[package]
name = "skillchain-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.0", default-features = false }

# Substrate
frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
frame-executive = { version = "4.0.0-dev", default-features = false }
pallet-balances = { version = "4.0.0-dev", default-features = false }
pallet-timestamp = { version = "4.0.0-dev", default-features = false }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false }
sp-api = { version = "4.0.0-dev", default-features = false }
sp-block-builder = { version = "4.0.0-dev", default-features = false }
sp-core = { version = "21.0.0", default-features = false }
sp-inherents = { version = "4.0.0-dev", default-features = false }
sp-runtime = { version = "24.0.0", default-features = false }
sp-std = { version = "8.0.0", default-features = false }
sp-version = { version = "22.0.0", default-features = false }

# Local pallets
pallet-skill-registry = { path = "../pallets/skill-registry", default-features = false }
pallet-endorsements = { path = "../pallets/endorsements", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-version/std",
    "pallet-skill-registry/std",
    "pallet-endorsements/std",
]